--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </style>
 </head>
 <body>
-    <h2>B2 English Language Test</h2>
+    <h2>Test Your English Level</h2>
     <div id="passageContainer"></div>
     <form id="quizForm"></form>
     <button type="submit" class="submit-btn" id="submitBtn">Submit</button>
