--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <div></div> <div></div>  </div>
 
     <div class="main-button-container">
-        <a href="#englishleveltest" class="main-button">Test your English level</a>
+        <a href="https://kubikdb.github.io/test-english-level/englishleveltest" class="main-button">Test your English level</a>
     </div>
 
     <div class="button-grid">
