--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         .button-grid {
             display: grid;
-            grid-template-columns: repeat(2, 1fr);
+            grid-template-columns: repeat(1, 1fr);
             gap: 15px;
             max-width: 400px;
             width: 90%;
@@ -86,7 +86,7 @@
             padding-top: 100%;
             position: relative;
             border-radius: 10px;
-            background-color: #ddd;
+            background-color: #ccc;
             text-decoration: none;
             color: #333;
             font-size: 5em;
@@ -97,7 +97,7 @@
         }
 
         .level-button:hover {
-            background-color: #ccc;
+            background-color: #bbb;
         }
 
         .level-button span {
