--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         .sandwich-bar {
             width: 100%;
             height: 3px;
-            background-color: black; /* Dark color for menu icon */
+            background-color: var(--primary-color); /* Dark color for menu icon */
         }
 
         /* Dropdown Menu Styles */
