--- a/index.html
+++ b/index.html
@@ -198,11 +198,11 @@
     </div>
 
     <div class="main-button-container">
-        <a href="https://kubikdb.github.io/test-english-level/englishleveltest" class="main-button">Test your English level</a>
+        <a href="https://kubikdb.github.io/test-english-level/test-your-english-level" class="main-button">Test your English level</a>
     </div>
 
     <div class="button-grid">
-        <a href="#a1" class="level-button">A1 level tests</a>
+        <a href="https://kubikdb.github.io/test-english-level/a1-level-tests" class="level-button">A1 level tests</a>
         <a href="#a2" class="level-button">A2 level tests</a>
         <a href="#b1" class="level-button">B1 level tests</a>
         <a href="#b2" class="level-button">B2 level tests</a>
