--- a/index.html
+++ b/index.html
@@ -203,11 +203,11 @@
 
     <div class="button-grid">
         <a href="https://kubikdb.github.io/test-english-level/a1-level-tests" class="level-button">A1 level tests</a>
-        <a href="#a2" class="level-button">A2 level tests</a>
-        <a href="#b1" class="level-button">B1 level tests</a>
-        <a href="#b2" class="level-button">B2 level tests</a>
-        <a href="#c1" class="level-button">C1 level tests</a>
-        <a href="#c2" class="level-button">C2 level tests</a>
+        <a href="https://kubikdb.github.io/test-english-level/a2-level-tests" class="level-button">A2 level tests</a>
+        <a href="https://kubikdb.github.io/test-english-level/b1-level-tests" class="level-button">B1 level tests</a>
+        <a href="https://kubikdb.github.io/test-english-level/b2-level-tests" class="level-button">B2 level tests</a>
+        <a href="https://kubikdb.github.io/test-english-level/c1-level-tests" class="level-button">C1 level tests</a>
+        <a href="https://kubikdb.github.io/test-english-level/c2-level-tests" class="level-button">C2 level tests</a>
     </div>
 
     <script>
