--- a/test-your-english-level.html
+++ b/test-your-english-level.html
@@ -59,7 +59,7 @@
       "A": "My brother play football every Sunday.",
       "B": "My brothers plays football every Sunday.",
       "C": "My brother plays football every Sunday.",
-      "D": "My brothers play football every Sunday."
+      "D": "My brother's play football every Sunday."
     },
     "correct_answer": "C",
     "category": "Grammar",
