--- a/b2-level-tests.html
+++ b/b2-level-tests.html
@@ -188,6 +188,7 @@
             const square = document.createElement('div');
             square.classList.add('test-square');
             square.textContent = i;
+            square.href = "https://kubikdb.github.io/test-english-level/b2-1"
             // You can add an onclick event to each square if needed
             // square.onclick = function() { alert('Square ' + i + ' clicked!'); };
             gridContainer.appendChild(square);
