--- a/b2.html
+++ b/b2.html
@@ -55,6 +55,8 @@
         const levelValue = urlParams.get('level');
         const iValue = parseInt(levelValue, 10);
 
+        document.querySelector('h2').textContent = `B2 — Test ${testNumber}`;
+
         fetch(`json/b2/test${iValue}.json`) // Path to your JSON file
             .then(response => {
                 console.log("Response Status:", response.status);
