--- a/b2-level-tests.html
+++ b/b2-level-tests.html
@@ -308,7 +308,7 @@
         for (let i = 1; i <= 100; i++) {
             const square = document.createElement('div');
             square.classList.add('test-square');
-            squareLink.href = `https://kubikdb.github.io/test-english-level/b2?level=${i}`; // Set the link URL
+            square.href = `https://kubikdb.github.io/test-english-level/b2?level=${i}`; // Set the link URL
             square.textContent = i;
             // You can add an onclick event to each square if needed
             // square.onclick = function() { window.location.href = 'test' + i + '.html'; };
