--- a/b2-level-tests.html
+++ b/b2-level-tests.html
@@ -306,12 +306,12 @@
         // JavaScript to dynamically generate 100 squares
         const gridContainer = document.querySelector('.test-squares-grid');
         for (let i = 1; i <= 100; i++) {
-            const square = document.createElement('a');
+            const square = document.createElement('div');
             square.classList.add('test-square');
-            square.href = `https://kubikdb.github.io/test-english-level/b2?level=${i}`; // Set the link URL
+            // square.href = `https://kubikdb.github.io/test-english-level/b2?level=${i}`; // Set the link URL
             square.textContent = i;
             // You can add an onclick event to each square if needed
-            // square.onclick = function() { window.location.href = 'test' + i + '.html'; };
+            square.onclick = function() { window.location.href = `https://kubikdb.github.io/test-english-level/b2?level=${i}`; };
             gridContainer.appendChild(square);
         }
     </script>
