--- a/b2-level-tests.html
+++ b/b2-level-tests.html
@@ -121,32 +121,16 @@
             background-color: rgba(52, 152, 219, 0.1);
         }
 
-        /* House icon with consistent styling */
-        .house-icon {
+        /* New SVG Home Icon with primary color */
+        .home-icon {
             width: 24px;
-            height: 20px;
-            position: relative;
+            height: 24px;
+            fill: var(--primary-color);
+            transition: fill var(--transition-speed);
         }
 
-        .house-roof {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 0;
-            height: 0;
-            border-left: 12px solid transparent;
-            border-right: 12px solid transparent;
-            border-bottom: 10px solid var(--primary-color);
-        }
-
-        .house-body {
-            position: absolute;
-            bottom: 0;
-            left: 4px;
-            width: 16px;
-            height: 12px;
-            background-color: var(--primary-color);
-            border-radius: 1px;
+        .home-button:hover .home-icon {
+            fill: var(--primary-color-darker);
         }
 
         /* Enhanced Dropdown Menu */
@@ -262,10 +246,9 @@
         </div>
         <div class="page-title">B2 level tests</div>
         <a href="https://kubikdb.github.io/test-english-level/" class="home-button">
-            <div class="house-icon">
-                <div class="house-roof"></div>
-                <div class="house-body"></div>
-            </div>
+            <svg class="home-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+                <path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/>
+            </svg>
         </a>
 
         <div class="dropdown-menu" id="sandwichDropdown">
