--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             <a href="#about">About Us</a>
             <a href="#terms">Terms of Use</a>
             <a href="#privacy">Privacy Policy</a>
-            <a href="#findword">FindWord</a>
+            <a href="#findword">FindWord Puzzle</a>
         </div>
     </div>
 
