--- a/b2-level-tests.html
+++ b/b2-level-tests.html
@@ -318,7 +318,7 @@
             // square.href = `https://kubikdb.github.io/test-english-level/b2?level=${i}`; // Set the link URL
             square.textContent = i;
             // You can add an onclick event to each square if needed
-            square.onclick = function() { window.location.href = `https://kubikdb.github.io/test-english-level/test-page?diff=b2&level=${i}`; };
+            square.onclick = function() { window.location.href = `https://kubikdb.github.io/test-english-level/test-page?diff=B2&level=${i}`; };
             gridContainer.appendChild(square);
         }
     </script>
