--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/svg+xml" href="icon.svg">
-    <title>Test your English level</title>
+    <title>English tests online</title>
     <style>
         /* Color Palette - Modern UI/UX with Dark Theme Support */
         :root {
