--- a/a2-level-tests.html
+++ b/a2-level-tests.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A2 level tests</title>
+    <title>Free A2 English tests</title>
     <style>
         /* Color Palette - Modern UI/UX - Matching the index.html */
         :root {
@@ -312,7 +312,7 @@
 
         // JavaScript to dynamically generate 100 squares
         const gridContainer = document.querySelector('.test-squares-grid');
-        for (let i = 1; i <= 100; i++) {
+        for (let i = 1; i <= 50; i++) {
             const square = document.createElement('div');
             square.classList.add('test-square');
             square.textContent = i;
