--- a/b1-level-tests.html
+++ b/b1-level-tests.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>B1 level tests</title>
+    <title>Free B1 English tests</title>
     <style>
         /* Color Palette - Modern UI/UX - Matching the index.html */
         :root {
