--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         .main-button-container {
             width: 90%;
             max-width: 500px;
-            margin-bottom: 35px;
+            margin-bottom: 20px;
         }
 
         .main-button {
@@ -329,12 +329,13 @@
     </div>
 
     <div class="button-grid">
-        <a href="https://kubikdb.github.io/test-english-level/a1-level-tests" class="level-button a1">A1 level tests</a>
-        <a href="https://kubikdb.github.io/test-english-level/a2-level-tests" class="level-button a2">A2 level tests</a>
-        <a href="https://kubikdb.github.io/test-english-level/b1-level-tests" class="level-button b1">B1 level tests</a>
-        <a href="https://kubikdb.github.io/test-english-level/b2-level-tests" class="level-button b2">B2 level tests</a>
-        <a href="https://kubikdb.github.io/test-english-level/c1-level-tests" class="level-button c1">C1 level tests</a>
-        <a href="https://kubikdb.github.io/test-english-level/c2-level-tests" class="level-button c2">C2 level tests</a>
+        <a href="https://englishtests.online/a1-level-tests" class="level-button a1">A1 level tests</a>
+        <a href="https://englishtests.online/a2-level-tests" class="level-button a2">A2 level tests</a>
+        <a href="https://englishtests.online/b1-level-tests" class="level-button b1">B1 level tests</a>
+        <a href="https://englishtests.online/b2-level-tests" class="level-button b2">B2 level tests</a>
+        <a href="https://englishtests.online/c1-level-tests" class="level-button c1">C1 level tests</a>
+        <a href="https://englishtests.online/c2-level-tests" class="level-button c2">C2 level tests</a>
+        <a href="https://englishtests.online/findword" class="level-button c2">FindWord</a>
     </div>
 
 
