--- a/index.html
+++ b/index.html
@@ -325,17 +325,17 @@
     </div>
 
     <div class="main-button-container">
-        <a href="https://kubikdb.github.io/test-english-level/test-your-english-level" class="main-button">Test your English level</a>
+        <a href="https://englishtests.online/test-your-english-level" class="main-button">Test your English level</a>
     </div>
 
     <div class="button-grid">
-        <a href="https://englishtests.online/a1-level-tests" class="level-button a1">A1 level tests</a>
-        <a href="https://englishtests.online/a2-level-tests" class="level-button a2">A2 level tests</a>
-        <a href="https://englishtests.online/b1-level-tests" class="level-button b1">B1 level tests</a>
-        <a href="https://englishtests.online/b2-level-tests" class="level-button b2">B2 level tests</a>
-        <a href="https://englishtests.online/c1-level-tests" class="level-button c1">C1 level tests</a>
-        <a href="https://englishtests.online/c2-level-tests" class="level-button c2">C2 level tests</a>
-        <a href="https://englishtests.online/findword" class="level-button c2">FindWord</a>
+        <a href="https://englishtests.online/a1-english-tests" class="level-button a1">A1 level tests</a>
+        <a href="https://englishtests.online/a2-english-tests" class="level-button a2">A2 level tests</a>
+        <a href="https://englishtests.online/b1-english-tests" class="level-button b1">B1 level tests</a>
+        <a href="https://englishtests.online/b2-english-tests" class="level-button b2">B2 level tests</a>
+        <a href="https://englishtests.online/c1-english-tests" class="level-button c1">C1 level tests</a>
+        <a href="https://englishtests.online/c2-english-tests" class="level-button c2">C2 level tests</a>
+        <a href="https://englishtests.online/findword" class="level-button findword">FindWord</a>
     </div>
 
 
