--- a/test-your-english-level.html
+++ b/test-your-english-level.html
@@ -4,6 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test Your English Level</title>
+	<meta name="description" content="Discover your current English level with our comprehensive assessment test. Get immediate results and recommendations for improvement based on the CEFR framework.">
+	<meta name="keywords" content="English tests online, Free English tests, English level test, English proficiency test, Test your English level, English language assessment, English grammar tests, English vocabulary tests, TOEFL English tests, IELTS English tests, SAT English tests, Online English exercises, CEFR English tests">
+    	<meta name="author" content="englishtests.online">
+    	<meta name="robots" content="index, follow">
+<!-- Schema.org Markup for Google -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "EducationalOrganization",
+  "name": "Free English tests online",
+  "url": "https://englishtests.online",
+  "description": "Free online English tests for all levels from A1 to C2. Practice and improve your English language skills with hundreds of free tests and exercises."
+}
+</script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "EducationalResource",
+  "name": "English Level Assessment Test",
+  "description": "Discover your current English level with our comprehensive assessment test and get immediate results.",
+  "educationalLevel": "A1, A2, B1, B2, C1, C2",
+  "learningResourceType": "Assessment",
+  "isAccessibleForFree": true,
+  "provider": {
+    "@type": "Organization",
+    "name": "English Tests Online",
+    "url": "https://englishtests.online"
+  }
+}
+</script>
     <style>
         body {
             font-family: Arial, sans-serif;
