--- a/a2-english-tests.html
+++ b/a2-english-tests.html
@@ -4,6 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Free A2 English tests</title>
+    <meta name="description" content="Free A2 level English tests for elementary learners. Practice everyday phrases, simple conversations, and basic grammar structures.">
+    <meta name="keywords" content="English tests online, Free English tests, English level test, English proficiency test, Test your English level, English language assessment, English grammar tests, English vocabulary tests, TOEFL English tests, IELTS English tests, SAT English tests, Online English exercises, CEFR English tests">
+    	<meta name="author" content="englishtests.online">
+    	<meta name="robots" content="index, follow">
+<!-- Schema.org Markup for Google -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "EducationalOrganization",
+  "name": "Free English tests online",
+  "url": "https://englishtests.online",
+  "description": "Free online English tests for all levels from A1 to C2. Practice and improve your English language skills with hundreds of free tests and exercises."
+}
+</script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "EducationalResource",
+  "name": "A2 Beginner English Tests",
+  "description": "Free A2 level English tests for elementary learners. Practice everyday phrases, simple conversations, and basic grammar structures.",
+  "educationalLevel": "A2",
+  "learningResourceType": "Assessment",
+  "isAccessibleForFree": true,
+  "provider": {
+    "@type": "Organization",
+    "name": "English Tests Online",
+    "url": "https://englishtests.online"
+  }
+}
+</script>
     <style>
         /* Color Palette - Modern UI/UX - Matching the index.html */
         :root {
