--- a/b1-english-tests.html
+++ b/b1-english-tests.html
@@ -22,7 +22,7 @@
 {
   "@context": "https://schema.org",
   "@type": "EducationalResource",
-  "name": "B1 Pre-Intermediate English Tests",
+  "name": "B1 Intermediate English Tests",
   "description": "Intermediate English practice with free B1 level tests. Improve your ability to discuss familiar topics, express opinions, and understand main points of clear texts.",
   "educationalLevel": "B1",
   "learningResourceType": "Assessment",
